# dp

./: README.md
android_app/: .gitignore
gateway/LoraGateway/: .gitignore  Arguments.cpp  Arguments.h  CMakeLists.txt  LoRa.cpp  LoRa.h  README.md  Structures.h  UART.cpp  UART.h  main.cpp
gateway/LoraGateway/Logger/: Logger.cpp  Logger.h
gateway/LoraGateway/include/gateway/: Gateway.hpp
gateway/LoraGateway/include/gateway/cloud/: CsvWriter.hpp
gateway/LoraGateway/include/gateway/device/: UartManager.hpp
gateway/LoraGateway/include/gateway/device_communication/: LoraEndpoint.hpp  UartManager.hpp
gateway/LoraGateway/include/gateway/logger/: Logger.hpp
gateway/LoraGateway/include/gateway/settings/: Settings.hpp  SettingsParser.hpp
gateway/LoraGateway/include/gateway/structures/: GlobalContext.hpp  LoraMessage.hpp
gateway/LoraGateway/libs/spdlog/fmt/bundled/: format.h
gateway/LoraGateway/source/gateway/: Arguments.cpp  Gateway.cpp
gateway/LoraGateway/source/gateway/cloud/: CsvWriter.cpp
gateway/LoraGateway/source/gateway/device_communication/: LoreEndpoint.cpp  UartManager.cpp
gateway/LoraGateway/source/gateway/settings/: SettingsParser.cpp
gateway/LoraGateway/source/gateway/structures/: GlobalContext.cpp
gateway/LoraGateway/spdlog/fmt/bundled/: posix.h
gateway/lora_gateway/: CMakeLists.txt  Dockerfile  README.md  main.cpp
gateway/lora_gateway/include/gateway/: Gateway.hpp
gateway/lora_gateway/include/gateway/cloud/: CsvWriter.hpp
gateway/lora_gateway/include/gateway/common_tools/: EnumTools.hpp  MessageTools.hpp  OutputProtocolTools.hpp  TimeTools.hpp
gateway/lora_gateway/include/gateway/device/: Cellar.hpp  Device.hpp  DeviceFactory.hpp  Endpoint.hpp  Entry.hpp  LoraEndpoint.hpp  Message.hpp  Scale.hpp
gateway/lora_gateway/include/gateway/device/cellar/: CellarDevice.hpp  CellarEntry.hpp  CellarMessage.hpp
gateway/lora_gateway/include/gateway/device/scale/: ScaleDevice.hpp  ScaleEntry.hpp  ScaleMessage.hpp
gateway/lora_gateway/include/gateway/endpoint/: Endpoint.hpp  EndpointFactory.hpp
gateway/lora_gateway/include/gateway/endpoint/generator/: GeneratorEndpoint.hpp
gateway/lora_gateway/include/gateway/endpoint/lora/: LoraEndpoint.hpp  UartManager.hpp
gateway/lora_gateway/include/gateway/input_protocol/: Endpoint.hpp  EndpointFactory.hpp  InputProtocolMessage.hpp
gateway/lora_gateway/include/gateway/input_protocol/generator/: GeneratorEndpoint.hpp
gateway/lora_gateway/include/gateway/input_protocol/lora/: LoraEndpoint.hpp  UartManager.hpp
gateway/lora_gateway/include/gateway/logger/: Logger.hpp
gateway/lora_gateway/include/gateway/output/: Output.hpp  OutputFactory.hpp
gateway/lora_gateway/include/gateway/output/csv/: CsvOutput.hpp
gateway/lora_gateway/include/gateway/output/mqtt/: Mqtt.hpp
gateway/lora_gateway/include/gateway/output/mqtt_protocol/: Mqtt.hpp
gateway/lora_gateway/include/gateway/output_protocol/: CsvManager.hpp  MessageAckTimer.hpp  Output.hpp  OutputFactory.hpp  OutputProtocolMessage.hpp
gateway/lora_gateway/include/gateway/settings/: Settings.hpp  SettingsParser.hpp
gateway/lora_gateway/include/gateway/structures/: DeviceMessage.hpp  GlobalContext.hpp  LoraMessage.hpp
gateway/lora_gateway/libs/spdlog/details/: pattern_formatter-inl.h  registry-inl.h  registry.h
gateway/lora_gateway/libs/wiringpi_placeholder/: wiringPi.h  wiringSerial.h
gateway/lora_gateway/resources/configuration/: default.json  for_docker.json
gateway/lora_gateway/resources/systemd/: gateway.service
gateway/lora_gateway/source/gateway/: Gateway.cpp
gateway/lora_gateway/source/gateway/cloud/: CsvWriter.cpp
gateway/lora_gateway/source/gateway/common_tools/: EnumTools.cpp  MessageTools.cpp  OutputProtocolTools.cpp  TimeTools.cpp
gateway/lora_gateway/source/gateway/device/: Cellar.cpp  Device.cpp  DeviceFactory.cpp  Endpoint.cpp  Entry.cpp  LoreEndpoint.cpp  Message.cpp  Scale.cpp
gateway/lora_gateway/source/gateway/endpoint/: Endpoint.cpp  EndpointFactory.cpp
gateway/lora_gateway/source/gateway/input_protocol/: Endpoint.cpp  EndpointFactory.cpp
gateway/lora_gateway/source/gateway/logger/: Logger.cpp
gateway/lora_gateway/source/gateway/output/: OutputFactory.cpp
gateway/lora_gateway/source/gateway/output_protocol/: CsvManager.cpp  MessageAckTimer.cpp  OutputFactory.cpp  OutputProtocolMessage.cpp
gateway/lora_gateway/source/gateway/settings/: Settings.cpp  SettingsParser.cpp
latex/: prace.tex
(+249 files in other folders)
